@@ -7416,4 +7416,5 @@ EPRINTS-3.1-beta-2
 
 2008-05-19 tdb
  * Secured oai_accesslogs script
+ * Fixed bug in Session::get_secure that returned false in Auth stage
 
